# sky-cli

./: CMakeLists.txt  Config.cmake.in  README.md  setup.sh
include/: cli.hpp  command.hpp  command_macros.hpp  help_message.hpp  parser.hpp  skycli.hpp  static_var_holder.hpp  static_var_macros.hpp  typing.hpp  wrapper_macros.hpp
src/: cli.cpp  command.cpp  help_message.cpp  parser.cpp  static_var_holder.cpp  typing.cpp  typing_util.cpp
test/: test_command.cpp  test_help_message.cpp  test_parser.cpp  test_typing_util.cpp
